--- a/src/components/image.css
+++ b/src/components/image.css
@@ -2,3 +2,12 @@ img {
     width:200px;
     margin: 0 20px;
 }
+
+body {
+    background-color: green;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+    align-content: center;
+}
